# msu_photometric_stereo

./: .gitignore  CMakeLists.txt  CalibratedPhotometricStereo.cpp  LICENSE  PhotometricStereo.cpp  PrintBoundingBox.cpp  README.md  TODO.md  report.tex  verify.h
.github/workflows/: release.yml
dataset/MSU/: crop.py
dataset/new/: crop.py
tex/: introduction.tex  photometric_stereo.tex  radiometry.tex  surfaces.tex  title.tex
